remoção dos espaços nos parágrafos

--- a/index.html
+++ b/index.html
@@ -56,31 +56,31 @@
                     <h3>Dias na tribo</h3>
                     <br>
                     <p>
-                        Dolor varius accumsan sapien interdum rutrum posuere placerat iaculis, sociosqu aenean risus tellus est enim scelerisque ultrices, convallis curae bibendum netus posuere duis aliquam. 
-                        inceptos euismod rhoncus placerat aliquet, placerat eu nec pharetra torquent, habitant aliquam lorem. 
-                        volutpat placerat posuere laoreet nisi molestie urna dolor pulvinar eros, porttitor amet pharetra potenti non scelerisque donec nulla lacus, habitasse proin sapien sollicitudin ac viverra sed in. 
-                        sapien donec senectus integer sagittis tempus vestibulum inceptos nostra curabitur maecenas, aliquam eleifend purus fames adipiscing donec lacus non bibendum, sed sollicitudin etiam ut vehicula vitae dapibus odio eleifend. 
+                        Dolor varius accumsan sapien interdum rutrum posuere placerat iaculis, sociosqu aenean risus tellus est enim scelerisque ultrices, convallis curae bibendum netus posuere duis aliquam.
+                        inceptos euismod rhoncus placerat aliquet, placerat eu nec pharetra torquent, habitant aliquam lorem.
+                        volutpat placerat posuere laoreet nisi molestie urna dolor pulvinar eros, porttitor amet pharetra potenti non scelerisque donec nulla lacus, habitasse proin sapien sollicitudin ac viverra sed in.
+                        sapien donec senectus integer sagittis tempus vestibulum inceptos nostra curabitur maecenas, aliquam eleifend purus fames
+                        adipiscing donec lacus non bibendum, sed sollicitudin etiam ut vehicula vitae dapibus odio eleifend.
                     </p>
                     <p>
-                        Rhoncus sociosqu sem duis sem facilisis adipiscing curae volutpat, elementum tortor sollicitudin risus himenaeos imperdiet dictum. 
-                        sociosqu purus viverra orci ullamcorper consectetur malesuada urna fames mauris nisl sit phasellus, habitasse dapibus quam proin vitae sapien etiam vulputate tincidunt auctor turpis. 
-                        sem auctor tempus etiam sodales a aenean platea, vel mollis vestibulum himenaeos inceptos per, fringilla taciti duis semper lorem sapien. 
-                        mauris vulputate massa rutrum nostra a enim cubilia, hendrerit ut nostra interdum sapien ultricies eu ut, eget donec elementum ultrices eget vestibulum. 
+                        Rhoncus sociosqu sem duis sem facilisis adipiscing curae volutpat, elementum tortor sollicitudin risus himenaeos imperdiet dictum.
+                        sociosqu purus viverra orci ullamcorper consectetur malesuada urna fames mauris nisl sit phasellus, habitasse dapibus quam proin vitae sapien etiam vulputate tincidunt auctor turpis.
+                        sem auctor tempus etiam sodales a aenean platea, vel mollis vestibulum himenaeos inceptos per, fringilla taciti duis semper lorem sapien.
+                        mauris vulputate massa rutrum nostra a enim cubilia, hendrerit ut nostra interdum sapien ultricies eu ut, eget donec elementum ultrices eget vestibulum.
                         lacus habitant lacus magna sagittis arcu sodales duis quisque id auctor, diam condimentum purus risus ultricies aenean ut euismod morbi. 
                     </p>
                     <p>
-                        Eget libero morbi nunc pellentesque gravida vulputate torquent neque consequat, porttitor habitant cursus erat ultrices quis risus volutpat senectus, eu ultrices ac curabitur velit neque porttitor blandit. 
-                        donec ac sapien rutrum enim, aptent porta interdum, in sociosqu integer. 
-                        sociosqu elit himenaeos in vel netus pulvinar donec, pulvinar ante nibh curabitur netus aptent, tincidunt vestibulum aliquet nulla praesent sit. 
-                        conubia magna lacus convallis ligula torquent donec ullamcorper elementum amet sodales placerat, posuere conubia massa tellus nam ipsum lorem dictum conubia tincidunt. 
-                        curae laoreet cras pharetra fusce imperdiet diam nec ultrices, viverra erat tellus in neque euismod nisi turpis, sem eros quisque felis luctus amet proin. 
+                        Eget libero morbi nunc pellentesque gravida vulputate torquent neque consequat, porttitor habitant cursus erat ultrices quis
+                        risus volutpat senectus, eu ultrices ac curabitur velit neque porttitor blandit.
+                        donec ac sapien rutrum enim, aptent porta interdum, in sociosqu integer. sociosqu elit himenaeos in vel netus pulvinar donec, pulvinar ante nibh curabitur netus aptent, tincidunt vestibulum aliquet nulla praesent sit.
+                        Conubia magna lacus convallis ligula torquent donec ullamcorper elementum amet sodales placerat, posuere conubia massa tellus nam ipsum lorem dictum conubia tincidunt.
+                        curae laoreet cras pharetra fusce imperdiet diam nec ultrices, viverra erat tellus in neque euismod nisi turpis, sem eros quisque felis luctus amet proin.
                     </p>
                     <p>
-                        Pellentesque felis congue commodo litora auctor dictumst taciti, mi curae facilisis himenaeos aenean hendrerit rhoncus volutpat, tempus donec ac justo faucibus amet. 
-                        tempus nulla at accumsan libero sodales etiam integer, non netus metus euismod curabitur ullamcorper. 
-                        posuere habitant dictum ullamcorper senectus odio ligula vehicula tempus, purus lectus leo porta morbi et varius urna mattis, tempor condimentum dapibus aenean ut taciti lacinia. 
-                        duis commodo auctor per netus fermentum ac non taciti, senectus augue inceptos curabitur mauris quam aliquet et, odio quisque varius primis cras nibh egestas. 
-                        eget ligula at eu sagittis molestie integer aliquam ad, fringilla ligula justo aenean porttitor convallis consequat. 
+                        Pellentesque felis congue commodo litora auctor dictumst taciti, mi curae facilisis himenaeos aenean hendrerit rhoncus volutpat, tempus donec ac justo faucibus amet. tempus nulla at accumsan libero sodales etiam integer, non netus metus euismod curabitur ullamcorper.
+                        posuere habitant dictum ullamcorper senectus odio ligula vehicula tempus, purus lectus leo porta morbi et varius urna mattis, tempor condimentum dapibus aenean ut taciti lacinia.
+                        duis commodo auctor per netus fermentum ac non taciti, senectus augue inceptos curabitur mauris quam aliquet et, odio quisque varius primis cras nibh egestas.
+                        eget ligula at eu sagittis molestie integer aliquam ad, fringilla ligula justo aenean porttitor convallis consequat.
                     </p>
                 </section>
             </article>
@@ -90,20 +90,18 @@
             <section class="sessao">
                 <h3>O dia em que eu aprendi a usar o Github</h3><br>
                 <p>
-                    Consequat et etiam dui id velit turpis accumsan, eget commodo scelerisque hac scelerisque tortor amet, urna quis ut porttitor class mauris. 
-                    donec ad etiam curabitur purus scelerisque, malesuada enim condimentum sapien purus enim, a per taciti vel. 
-                    sit orci imperdiet eros metus dapibus luctus nunc pulvinar felis imperdiet, magna class pretium vitae pellentesque eleifend curabitur fringilla volutpat per ac, ornare enim pretium odio dolor sociosqu justo mauris euismod. 
-                    tellus fusce inceptos phasellus fermentum nullam congue et dolor etiam, lectus nibh litora euismod justo suspendisse accumsan ad malesuada, egestas proin vestibulum taciti turpis cubilia lectus consequat. 
+                    Consequat et etiam dui id velit turpis accumsan, eget commodo scelerisque hac scelerisque tortor amet, urna quis ut porttitor class mauris.
+                    donec ad etiam curabitur purus scelerisque, malesuada enim condimentum sapien purus enim, a per taciti vel.
+                    sit orci imperdiet eros metus dapibus luctus nunc pulvinar felis imperdiet, magna class pretium vitae pellentesque eleifend curabitur fringilla volutpat per ac, ornare enim pretium odio dolor sociosqu justo mauris euismod. tellus fusce inceptos phasellus fermentum nullam congue et dolor etiam, lectus nibh litora euismod justo suspendisse accumsan ad malesuada, egestas proin vestibulum taciti turpis cubilia lectus consequat.
+                <p>
+                    Cubilia tellus ac hac purus platea libero, facilisis magna platea primis elementum, aliquet ad vitae ligula elit.
+                    per pharetra consequat vestibulum phasellus suspendisse, per ut cursus ante enim, arcu nunc dui ultrices.
+                    donec facilisis vitae faucibus platea ornare varius, rutrum orci justo cubilia senectus blandit, pellentesque quis vulputate dictumst in.
+                    consequat sollicitudin luctus magna imperdiet ultricies volutpat, lectus odio tortor commodo dolor fames, quam accumsan venenatis non sollicitudin.
+                    neque fames nec malesuada dapibus amet fermentum ante quam sem lorem, sed accumsan leo hac erat integer vehicula viverra congue cras conubia, id in platea mattis mollis proin tortor aenean cubilia.
                 </p>
                 <p>
-                    Cubilia tellus ac hac purus platea libero, facilisis magna platea primis elementum, aliquet ad vitae ligula elit. 
-                    per pharetra consequat vestibulum phasellus suspendisse, per ut cursus ante enim, arcu nunc dui ultrices. 
-                    donec facilisis vitae faucibus platea ornare varius, rutrum orci justo cubilia senectus blandit, pellentesque quis vulputate dictumst in. 
-                    consequat sollicitudin luctus magna imperdiet ultricies volutpat, lectus odio tortor commodo dolor fames, quam accumsan venenatis non sollicitudin. 
-                    neque fames nec malesuada dapibus amet fermentum ante quam sem lorem, sed accumsan leo hac erat integer vehicula viverra congue cras conubia, id in platea mattis mollis proin tortor aenean cubilia. 
-                </p>
-                <p>
-                    Sapien venenatis sem consectetur, arcu curabitur. 
+                    Sapien venenatis sem consectetur, arcu curabitur.
                 </p>
             </section>
             <div id="tabela">
