adiciona link externo

--- a/index.html
+++ b/index.html
@@ -11,11 +11,7 @@
     <header id="cabecalho"><h1 id="titulo"> Projeto 1 - Lições aprendidas</h1>
         <img src ="oie_7mbgcqpjn3sh.jpg" id="minha_foto">
     ￼    <nav>
-         <ul>
-    <li>sdkscm</li>
-    <li>oiefjkf</li>
-        </ul>
-
+    ojlklkjlkj 
     ￼    </nav>
 
     ￼</header>
