Corrige excesso de letras nos artigos e seçoes

--- a/index.html
+++ b/index.html
@@ -50,17 +50,17 @@
   <!----------------------------------------- Seção-03: Artigos -------------------------------------------------------->
   <aside>
     <section class="lists Artigos">
-      <h3 class="subtitle"> Metodologia de Aprendizado: </h3>
+      <h3 class="subtitle"> Sobre o Meu Aprendizado na Trybe </h3>
       <p class="lado-direito">
-        Na Trybe, inicialmente eu procurei assistir os conteúdos das aulas nos dias e horários destinados para isso. Logo percebi que essa metodologia não era promissora. Assim, adotei a seguinte metodologia: Estudar antecipadamente os conteúdos do dia seguinte já na noite do dia anterior, praticar os exercícios do dia já pela parte da manhã. 
+        Na Trybe a rotina de aprendizado se faz em rítimo acelerado e constante. Todos os dias somos desafiados a aprender algo novo e, com empenho e dedicação, o progresso e a evolução nos trabalhos acontece de uma forma muito natural. É um curso que não te dá espaço para arrastar dúvidas ou seguir adiante sem aprender por completo os onteúdos, pois cada nova etapa do processo de aprendizagem exige do aluno a absorção e o entendimento pleno dos conteúdos anteriores. Verdade seja dita: É um curso muito prático, rápido e empolgante, mas que também exige muito dos seus alunos.
       </p>
     </section>
   </aside>
   <!-------------------------------------------------------------------------------->
   <article class="lists Artigos">
-    <h3 id="meu-aprendizado" class="subtitle"> Sobre o Meu Aprendizado na Trybe </h3>
+    <h3 id="meu-aprendizado" class="subtitle"> Metodologia de Aprendizado </h3>
     <p class="lado-esquerdo">
-      Na Trybe a rotina de aprendizado se faz em rítimo acelerado e constante. Todos os dias somos desafiados a aprender algo novo e, com empenho e dedicação, o progresso e a evolução nos trabalhos acontece de uma forma muito natural. É um curso que não te dá espaço para arrastar dúvidas ou seguir adiante sem aprender por completo os onteúdos, pois cada nova etapa do processo de aprendizagem exige do aluno a absorção e o entendimento pleno dos conteúdos anteriores. Verdade seja dita: É um curso muito prático, rápido e empolgante, mas que também exige muito dos seus alunos.  
+      Na início, eu procurei assistir os conteúdos das aulas nos dias e horários destinados para isso. Logo percebi que essa metodologia não era promissora. Adotei então a seguinte postura: Estudar antecipadamente os conteúdos do dia seguinte já na noite do dia anterior, praticar os exercícios do dia já pela parte da manhã.
     </p>
   </article>
   <!----------------------------------------- Seção-04: Tabela Virtudes ------------------------------------------------>
