etapa requisitos obrigatorios

--- a/index.html
+++ b/index.html
@@ -6,8 +6,55 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <header id="cabecalho">
+        <div id="cabecalho">
             <h1 id="titulo">Lições Aprendidas</h1>
-        </header>
+        </div>
+        <div id="minha_foto">
+            <img src="/rsz_foto_perfil.jpg" alt="Rosto do estudante">
+        </div>
+        <nav>
+            <div id="licoes_aprendidas">
+                <ol>
+                    <li>Instalar e usar Linux</li>
+                    <li>Fundamentos do Desenvolvimento Web</li>
+                    <li>Utilizar o Terminal</li>
+                    <li>Unix & Bash</li>
+                    <li>GitHub</li>
+                    <li>Como funciona a Internet</li>
+                    <li>HyperText Markup Language</li>
+                    <li>CSS</li>
+                    <li>Soft Skills</li>
+                    <li>linkedin Campeão</li>
+                </ol>
+            </div>
+            <div id="licoes_a_aprender">
+                <ul>
+                    <li>JavaScript</li>
+                    <li>Lógica de Programação</li>
+                    <li>DOM</li>
+                    <li>Eventos</li>
+                    <li>Web Storage</li>
+                    <li>Forms</li>
+                    <li>Flexbox</li>
+                    <li>Responsivo</li>
+                    <li>JavaScript ES6</li>
+                    <li>Testes Unitários</li>
+                </ul>
+            </div>
+        </nav>
+        <article>
+            <p>Trybe meu maior desafio. Ao escolher um lugar para aprender a ser Desenvolvedor Web conhecia a Trybe. Para conseguir uma vaga tive que estudar muito pôs estou trocando minha área de atuação. Os desafios são inúmeros. Instalar e configurar um novo sistema operacional no computador. Aprender a usar vários programas como slack, zoom, conteúdos totalmente novos. A jornada está sendo muito difícil mas acredito que vai ser compensadora.</p>
+        </article>
+        <section>
+            <aside>
+                <p>Minha maior dificuldade é organizar meu aprendizado. Administrar o grande volume de conteúdo para aprender, os projetos, desenvolver Soft Skills. Preciso de ajuda.</p>
+            </aside>
+        </section>
+        <div>
+            <a href="https://jornaldocarro.estadao.com.br/carros/ssc-tuatara-carro-mais-rapido-do-mundo/#:~:text=O%20t%C3%ADtulo%20de%20carro%20de,Vegas%2C%20no%20meio%20no%20deserto." target="_blank">O carro mais rápido do mundo</a>
+        </div>
+        <footer id="rodape">
+            <p>Morador de Niterói</p>
+        </footer>
     </body>
 </html>
