correcoes diversas e inclusao de imagem, listas, footer, tabela

--- a/index.html
+++ b/index.html
@@ -10,9 +10,59 @@
         <header id="cabecalho">
             <h1 id="titulo">[F]elipe Rodrigues Pimentel</h1>
             <nav id="navigation">
-                <a class="botaoAtivo" href="">PERFIL</a><a class="botao" href="https://www.youtube.com/watch?v=vDDkrrGMZfc" target="_blank">LINK</a>
+                <a class="botaoAtivo" href="">PERFIL</a><a class="botao" href="https://www.youtube.com/watch?v=vDDkrrGMZfc" target="_blank">LINK</a><!--lembrar de colocar o link de verdade-->
             </nav>
         </header>
+
+        <section id="content">
+            <section id="lessonsLearned">
+                <h2 class="sectionTitles">LESSONS LEARNED</h2>
+                <img id="minha_foto" src="photo.jpg" alt="Felipe Pimentel">
+                <div id="divTable">
+                    <table id="table">
+                        <tr>
+                            <th>[completed]</th>
+                            <th>[awaiting...]</th> 
+                        </tr>
+                        <tr>
+                            <td>
+                                <ol id="licoes_aprendidas">
+                            <li>Unix</li>
+                            <li>Git</li>
+                            <li>GitHub</li>
+                            <li>Empatia</li>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>Semantic HTML</li>
+                            <li>Slack</li>
+                            <li>Zoom</li>
+                            <li>Inspect</li>
+                                </ol>
+                            </td>
+                            <td>
+                                <ul id="licoes_a_aprender">
+                            <li>JavaScript</li>
+                            <li>DOM</li>
+                            <li>Forms</li>
+                            <li>CSS Responsive</li>
+                            <li>ES6</li>
+                            <li>HOF</li>
+                            <li>Unit Tests</li>
+                            <li>React</li>
+                            <li>Node</li>
+                            <li>SQL</li>
+                                </ul>
+                        </td>
+                        </tr>
+                    </table>
+                </div>
+            </section>
+
+        </section>
+
+        <footer id="rodape">
+            <h3 id="easterEgg">Joguem NieR:Automata, gostoso demais. Glory to mankind.</h3>
+        </footer>
     </body>
 
 </html>
