Corrige erros residuais indicados pelo code climate

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </ul>
     </section>
     <!---------------------------------------------- Seção-03: Artigos --------------------------------------------------->
-    <aside class="Direita">
+    <aside>
       <section class="lists Artigos">
         <h3 class="subtitle"> Sobre o Meu Aprendizado na Trybe </h3>
         <p class="lado-direito">
@@ -57,7 +57,7 @@
       </section>
     </aside>
     <!-------------------------------------------------------------------------->
-    <aside class="Esquerda">
+    <aside>
       <article class="lists Artigos">
         <h3 id="meu-aprendizado" class="subtitle"> Metodologia de Aprendizado </h3>
         <p class="lado-esquerdo">
