adicionando class lado esquerdo e direito

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
       </section>
     </main>
     <section>
-      <article>
-        <p class="lado-esquerdo">
+      <article class="lado-esquerdo">
+        <p>
           Lorem Ipsum is simply dummy text of the printing and typesetting
           industry. Lorem Ipsum has been the industry's standard dummy text ever
           since the 1500s, when an unknown printer took a galley of type and
@@ -85,8 +85,8 @@
         </p>
       </article>
 
-      <aside>
-        <p class="lado-direito">
+      <aside class="lado-direito">
+        <p>
           It has survived not only five centuries, but also the leap into
           electronic typesetting, remaining essentially unchanged. It was
           popularised in the 1960s with the release of Letraset sheets
