11- Adequacao da semantica. ✅

--- a/index.html
+++ b/index.html
@@ -7,76 +7,96 @@
     <title>Projeto HTML & CSS | Cleber Teixeira</title>
 </head>
 <body>
-
   <header id="cabecalho">
     <section>
       <h1 id="titulo">Primeiro Projeto | HTML & CSS - Trybe! 🚀</h1>
     </section>
-      <nav id="navegacao">
-        <ul>
-          <li>
-            <img id="linkedin" src="https://edugoldcareers.files.wordpress.com/2013/07/linkedin-icon20small.png">
-            <a href="https://www.linkedin.com/in/cleberlopesteixeira/">Cleber Lopes Teixeira</a>
-          </li>
-          <li>|</li>
-          <li>Saiba mais sobre a <a href="https://blog.betrybe.com/" target="_blank" rel="noopener noreferrer">Trybe</a></li>
-        </ul>
-      </nav>
   </header>
 
   <main>
-    <section>
+    <section id="foto">
+      <h2 id="cleber">Foto: Cleber Lopes Teixeira</h2>
       <img id="minha_foto" src="https://avatars1.githubusercontent.com/u/72811671?s=460&u=34008ff57b6cc2524ae87a154c1fe70ef90abe5c&v=4" alt="Cleber Teixeira - Turma 09">
-    <table>
-      <tr>
-        <th>Lições aprendidas:</th>
-        <th>Lições a aprender:</th>
-      </tr>
-      <tr>
-        <td>
-          <ol id="licoes_aprendidas">
-                <li>Zoom</li>
-                <li>Linux</li>
-                <li>Unix</li>
-                <li>Git</li>
-                <li>GitHub</li>
-                <li>Slack</li>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>Inteligência Emocional</li>
-                <li>Empatia</li>
-            </ol>
-        </td>
-        <td>
-          <ul id="licoes_a_aprender">
-            <li>JavaScript</li>
-            <li>Lógica de Programação</li>
-            <li>Algoritmos</li>
-            <li>DOM</li>
-            <li>JavaScript ES6</li>
-            <li>Testes automatizados com Jest</li>
-            <li>React</li>
-            <li>Formulários com React</li>
-            <li>Metodologias Ágeis</li>
-            <li>+ Soft Skills</li>
-        </ul>
-        </td>
-      </tr>
-    </table>
-
-      <article>
-        <h2>Minha experiência com a Trybe</h2>
-        <p>
-            Minha experiência junto a Trybe tem sido muito incrível, intenso, motivador, inspirador e muito rico. Aqui você não aprende somente o conteúdo técnico necessário para o mercado de trabalho, aprendemos valores de soft skills muito importantes e que agregam muito para nosso crescimento enquanto pessoas, e desta forma temos um ensino completo que nos prepara não só para o mercado como também para vida. <em>Esta é a Trybe!</em> 😎👍
-        </p>
-      </article>
     </section>
 
-    <aside>
-      <h2>Minha evolução com HTML & CSS</h2>
+    <nav id="navegacao">
+      <table id="tabela">
+        <tr>
+          <th colspan="2">
+            <h3 id="titulo_tab">Acesse:</h3>
+          </th>
+        </tr>
+        <tr>
+          <td colspan="2">
+            <strong>Saiba mais sobre a</strong> <a class="trybe" href="https://blog.betrybe.com/" target="_blank" rel="noopener noreferrer">Trybe</a>
+          </td>
+        </tr>
+        <tr>
+          <td class="celula1">
+            <img id="linkedin" src="https://edugoldcareers.files.wordpress.com/2013/07/linkedin-icon20small.png">
+          </td>
+          <td class="celula2">
+            <a class="trybe" href="https://www.linkedin.com/in/cleberlopesteixeira" target="_blank">Cleber Teixeira</a>
+          </td>
+        </tr>
+      </table>
+    </nav>
+
+    <section>
+      <div id="lista1" class="lista">
+        <h3>Lições aprendidas:</h3>
+        <ol id="licoes_aprendidas">
+          <li>Zoom</li>
+          <li>Linux</li>
+          <li>Unix</li>
+          <li>Git</li>
+          <li>GitHub</li>
+          <li>Slack</li>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>Inteligência Emocional</li>
+          <li>Empatia</li>
+        </ol>
+      </div>
+
+      <div id="lista2" class="lista">
+        <h3>Lições a aprender:</h3>
+        <ul id="licoes_a_aprender">
+          <li>JavaScript</li>
+          <li>Lógica de Programação</li>
+          <li>Algoritmos</li>
+          <li>DOM</li>
+          <li>JavaScript ES6</li>
+          <li>Testes automatizados com Jest</li>
+          <li>React</li>
+          <li>Formulários com React</li>
+          <li>Metodologias Ágeis</li>
+          <li>+ Soft Skills</li>
+        </ul>
+      </div>
+    </section>
+
+    <article>
+      <h2>Minha experiência com a Trybe</h2>
       <p>
-        Até pouco tempo atrás minha páginas profissionais eu as estruturava de maneira muito amadora. Hoje com duas semanas e meia de curso na Trybe consigo perceber uma evolução muito grande. Então o que posso dizer é: <em>Vamo que vamo!!!</em> ✌️🚀 <em>#goTrybe</em>
+          Minha experiência junto a Trybe tem sido muito incrível, intenso, motivador, inspirador e muito rico.
+          Aqui não aprendemos somente o conteúdo técnico necessário para o mercado de trabalho, aprendemos também
+          valores de soft skills muito importantes e que agregam muito para nosso crescimento enquanto pessoas,
+          e desta forma temos um ensino completo que nos prepara não só para o mercado como também para vida.
+          <em>Esta é a Trybe!</em> 😎👍
       </p>
+    </article>
+
+
+    <aside>
+      <section>
+        <h2>Minha evolução com HTML & CSS</h2>
+        <p>
+          Até pouco tempo atrás minha páginas profissionais eu as estruturava de maneira muito amadora. Hoje com duas
+          semanas e meia de curso na Trybe consigo perceber uma evolução muito grande. Então o que posso dizer é:
+          <em>Vamo que vamo!!!</em> ✌️🚀 <em>#goTrybe</em>
+        </p>
+      </section>
     </aside>
 
     <footer id="rodape"><em>Todos os direitos reservados, Cleber Lopes Teixeira | Trybe - Turma 09</em> ✌️🚀</footer>
