aside + font-family

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width" />
+        <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
         <title>Lessons Learned Project</title>
     </head>
@@ -64,7 +65,7 @@
                 <aside class="lado-direito">
                     <h3>Lorem ipsum</h3>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ac arcu molestie neque auctor rutrum cursus in lorem. Ut eget dignissim magna. Aenean eget dictum odio, sed porttitor magna. Nunc maximus vitae est bibendum tempor.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ac arcu molestie neque auctor rutrum cursus in lorem. Ut eget dignissim magna.
                     </p>
                 </aside>
                 <div class="clear"></div>
