--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <img id="minha_foto" src="giovani2.png" alt="imagem_autor">
         <section class="clear" id="lists">
             <div id="lista-aprendidas">
-                <h2>Lições aprendidas</h2>
                 <ol id="licoes_aprendidas">
+                    <h2>Lições aprendidas</h2>
                     <li>HTML;</li>
                     <li>CSS;</li>
                     <li>SEO;</li>
@@ -49,11 +49,9 @@
                     <li>Banco de dados;</li>
                 </ul>
             </div>
+            <div class="clear"></div>
         </section>       
-        <div class="clear"></div>
-        <table>
-            
-        </table>
+        <div class="clear"></div>        
         <div class="container-infromation">
             <article id="article" class="lado-esquerdo">
                 <h3>Lorem ipsum</h3>
@@ -71,7 +69,54 @@
                 <div class="clear"></div>
             </section>
         </div>
-        <a href="https://www.linkedin.com/in/giovani-diccini/" target="_blank">Linkedin</a>
+        <div class="games">
+            <h3>Meus jogos favoritos</h3>
+            <table>
+                <tr>
+                    <th>Nome</th>
+                    <th>Empresa</th>
+                    <th>Estilo</th>
+                    <th>Metaritc</th>
+                </tr>
+                <tr>
+                    <td>Braid</td>
+                    <td>Number None Inc.</td>
+                    <td>Action, Adventure</td>
+                    <td>90</td>
+                </tr>
+                <tr>
+                    <td>Portal 2</td>
+                    <td>Valve</td>
+                    <td>FPS, Sci-Fi</td>
+                    <td>95</td>
+                </tr>
+                <tr>
+                    <td>Ori and the blind forest</td>
+                    <td>Moon Studios</td>
+                    <td>Action, 2D</td>
+                    <td>88</td>
+                </tr>
+                <tr>
+                    <td>Braid</td>
+                    <td>Number None Inc.</td>
+                    <td>Action, Adventure</td>
+                    <td>90</td>
+                </tr>
+                <tr>
+                    <td>Braid</td>
+                    <td>Number None Inc.</td>
+                    <td>Action, Adventure</td>
+                    <td>90</td>
+                </tr>
+                <tr>
+                    <td>Braid</td>
+                    <td>Number None Inc.</td>
+                    <td>Action, Adventure</td>
+                    <td>90</td>
+                </tr>
+            </table>
+        </div>
+        <a id="linkedin" href="https://www.linkedin.com/in/giovani-diccini/" target="_blank">LinkedIn</a>
         <footer id="rodape">
             <p>
                 Created by, <br>Giovani Diccini.
