Adicao de tabela na pagina

--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
   </header>
   <main id="conteudo-principal">
     <img id="minha_foto" src="https://thumbs2.imgbox.com/ee/bf/U0SoaEPl_t.jpg" alt="Imagem Enio Nicael"/>
-    <a href="https://github.com/EnioNicael" target="_blank">GitHub</a>
+    <nav>
+      <a href="https://github.com/EnioNicael" target="_blank">GitHub</a>
+      <a href="https://www.linkedin.com/in/enio-nicael/" target="_blank">Linkedin</a>
+      <a href="https://www.instagram.com/enionicael/" target="_blank">Instagram</a>
+    </nav>
     <section>
       <h2>Lições Aprendidas</h2>
       <ol id="licoes_aprendidas">
@@ -59,6 +63,26 @@
          dia a dia.</p>
     </aside>
   </main>
+  <section>
+    <table>
+      <thead>
+        <tr>
+          <th>Introdução ao desenvolvimento web</th>
+          <th>Desenvolvimento Front-end</th>
+          <th>Desenvolvimento Back-End</th>
+          <th>Introdução à Ciência da Computação</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Em andamento</td>
+          <td>Pendente</td>
+          <td>Pendente</td>
+          <td>Pendente</td>
+        </tr>
+      </tbody>
+    </table>
+  </section>
   <footer id="rodape">
     <p>Desenvolvido por <strong>Enio Nicael</strong></p>
   </footer>
